--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://usastewe:k0naafGThso05bQY@cluster0.1yenk5u.mongodb.net/test"
+NEXTAUTH_JWT_SECRET="NEXTAUTH_AUTH_JWT_SECRET"
+NEXTAUTH_SECRET="NEXTAUTH_AUTH_SECRET"
